fix(chat): adjust font size of message sender to improve readability

--- a/src/app/features/chat/chat.component.scss
+++ b/src/app/features/chat/chat.component.scss
@@ -77,7 +77,7 @@
   margin-bottom: 12px;
   display: flex;
   color: black;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
 
   &:last-child {
