--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,25 +9,8 @@ $main-black: #3f3f46;
 $red-color: #ff0044aa;
 $gallery-gap: 1vw;
 
-%blue-glass {
-  background: radial-gradient(circle at 20% 30%, rgba(52, 152, 245, 0.5) 0%, transparent 50%),
-    radial-gradient(circle at 80% 20%, rgba(52, 132, 211, 0.4) 0%, transparent 60%),
-    radial-gradient(circle at 60% 80%, rgba(45, 130, 212, 0.4) 0%, transparent 55%),
-    radial-gradient(circle at 30% 60%, rgba(16, 129, 185, 0.3) 0%, transparent 45%),
-    linear-gradient(
-      135deg,
-      rgba(24, 24, 27, 0.3) 0%,
-      rgba(26, 26, 29, 0.2) 25%,
-      rgba(18, 18, 20, 0.3) 50%,
-      rgba(26, 26, 29, 0.2) 75%,
-      rgba(24, 24, 27, 0.3) 100%
-    );
-  border: 1px solid rgba(52, 245, 245, 0.1);
-  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
-}
-
 %light-blue-glass {
-  background: radial-gradient(circle at 20% 30%, rgba(52, 245, 245, 0.5) 0%, transparent 50%),
+  background: radial-gradient(circle at 20% 30%, rgba(52, 245, 245, 0.5) 0%, transparent 167%),
     radial-gradient(circle at 80% 20%, rgba(52, 211, 245, 0.4) 0%, transparent 60%),
     radial-gradient(circle at 60% 80%, rgba(45, 212, 245, 0.4) 0%, transparent 55%),
     radial-gradient(circle at 30% 60%, rgba(16, 185, 245, 0.3) 0%, transparent 45%),
@@ -44,7 +27,7 @@ $gallery-gap: 1vw;
 }
 
 %green-glass {
-  background: radial-gradient(circle at 20% 30%, rgba(52, 245, 221, 0.5) 0%, transparent 50%),
+  background: radial-gradient(circle at 20% 30%, rgba(52, 245, 221, 0.5) 0%, transparent 122%),
     radial-gradient(circle at 80% 20%, rgba(52, 211, 204, 0.4) 0%, transparent 60%),
     radial-gradient(circle at 60% 80%, rgba(45, 212, 191, 0.4) 0%, transparent 55%),
     radial-gradient(circle at 30% 60%, rgba(16, 185, 129, 0.3) 0%, transparent 45%),
